Fix predictButton alignment

--- a/src/components/Prediction/Prediction.module.css
+++ b/src/components/Prediction/Prediction.module.css
@@ -64,6 +64,7 @@
 .predictButton {
   display: block;
   width: 100%;
+  max-width: 305px;
   margin: 25px 24px;
   color: white;
   background: #004adf;
